# odcs-converter

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  ORGANIZATION_SUMMARY.md  README.md  SETUP.md  TEST_FIXES_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_tests.py
.github/workflows/: ci.yml
config/: env-template.txt  logging.yaml
docs/: MAKEFILE_GUIDE.md  README.md
docs/deployment/: README.md
docs/development/: CONTRIBUTING.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  ODCS_SCHEMA_COVERAGE.md  PROJECT_STRUCTURE.md  README.md  SETUP.md
docs/project-management/: ACTION_ITEMS_STATUS.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  ORGANIZATION_COMPLETION.md  README.md  RENAME_SUMMARY.md
docs/templates/: CHANGELOG_ENTRY.md  DELIVERY_SUMMARY.md  FEATURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  TEMPLATE_GENERATION.md
docs/testing/: FINAL_TEST_STATUS.md  LINT_FIXES_SUMMARY.md  TESTING.md  TEST_FIXES_SUMMARY.md
docs/user/: CLI.md  LOGGING.md  README.md
examples/: example_usage.py
scripts/: README.md  logging_demo.py  run_checks.sh  setup_tests.py
src/odcs_converter/: __init__.py  __main__.py  cli.py  excel_parser.py  generator.py  logging_config.py  logging_utils.py  models.py  template_generator.py  warnings_config.py  yaml_converter.py
src/odcs_excel_generator/: __init__.py  cli.py  generator.py  models.py
tests/: README.md  conftest.py  test_generator.py  test_template_generator.py
tests/end_to_end/: test_example_e2e.py  utils.py
tests/integration/: test_cli_integration.py  test_cli_real_conversion.py  test_enhanced_excel_conversion.py  test_excel_generation.py  test_excel_parser.py  test_excel_parsing.py  test_generator.py  test_logging_integration.py  utils.py
tests/test_data/inputs/json/: complete_contract.json  minimal_contract.json
tests/test_data/sample_contracts/: complete_contract.json  invalid_contract.json  minimal_contract.json
tests/unit/: test_cli.py  test_enhanced_models.py  test_example_unit.py  test_logging.py  test_models.py  test_yaml_converter.py  utils.py
