[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odcs-excel-generator"
version = "0.1.0"
description = "Generate Excel files from ODCS (Open Data Contract Standard) JSON schema with top-level fields in separate worksheets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thiruselva", email = "thiruselvaa@gmail.com"},
]
keywords = ["odcs", "excel", "data-contract", "json-schema", "open-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "click>=8.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/thiruselvaa/odcs-excel-generator"
Documentation = "https://github.com/thiruselvaa/odcs-excel-generator#readme"
Repository = "https://github.com/thiruselvaa/odcs-excel-generator"
Issues = "https://github.com/thiruselvaa/odcs-excel-generator/issues"

[project.scripts]
odcs-excel = "odcs_excel_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/odcs_excel_generator"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
